--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,64 @@
-.navbar-brand{
-    color:blue;
-    font-size:20px;
-
+.navbar-brand h1{
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 0.75;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #222;
+  font-size: 1.5em;
 }
 body{
-    color:white;
+  margin:0px !important;
+  font-family: italic;
 }
-.navbar-header{
-    height:100%;
+.dropdown-menu>li>a{
+  width:100%;
+}
+.navbar-default{
+  background-color: #39a5b8;
+  margin-left: -1px;
+  margin-top: -1px;
+}
+.navbar-nav >li>a,.navbar-brand{
+  color:white !important;
+  font-weight: bold;
+}
+.navbar-nav >li>a:focus,.navbar-nav >li>a:hover{ 
+  background-color: #7b8583 !important;
+}
+/*Large Device*/
+@media (min-width:1200px){
+
+}
+/*Medium Device*/
+@media (min-width:992px) and (max-width:1199px){
+.navbar-default{
+  padding:10px;
+}
+
+
+}
+/*Small Device*/
+@media (min-width:768px) and (max-width:991px){
+  .navbar-default{
+    padding:10px;
+  }
+  .navbar-nav >li>a{
+    font-size:1.4em;
+  }
+  .navbar-brand h1{
+    font-size:4vw;
+  }
+  .dropdown-menu>li>a{
+   color:white;
+  }
+  
+}
+/*Extra-Small*/
+@media (max-width:768px){
+.navbar-brand h1{
+
+font-size:5vw;
+}
+
 }
