--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 body{
   margin:0px !important;
-  font-family: cursive;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .dropdown-menu>li>a{
   width:100%;
@@ -39,7 +39,7 @@ body{
   background: url(who-staff_1200x656.jpg) center no-repeat;
   border: 0px 0px 50px #3F0C1F;
   border: 2px solid #3F0C1F;
-  height:650px;
+  height:600px;
   
 }
 .container .jumbotron{
@@ -59,7 +59,6 @@ body{
   border: 2px solid #3F0C1F;
 }
 .container .jumbotron{
- 
   padding:0px;
 }
 
@@ -91,7 +90,11 @@ body{
   #rd{
     clear:left;
   }
- 
+  .bottom-footer{
+    text-align: center !important;
+    
+  }
+  
 }
 /*Extra-Small*/
 @media (max-width:768px){
@@ -104,6 +107,19 @@ font-size:4vw;
 }
 .container .jumbotron{
   padding:0px;
+}
+.panel-footer .container{
+  text-align:center;
+}
+.panel-footer hr{
+  width:50%;
+}
+.bottom-footer{
+  text-align: center  !important;
+  display:block;
+}
+.bottom-footer .cpy{
+  text-align: center !important;
 }
 }
 /*header end*/
@@ -138,4 +154,81 @@ font-size:4vw;
   color:#3c4245;
   font-size:16px;
   line-height: 24px;
+}
+/*end row*/
+/*Footer*/
+footer{
+  background-color: #008dc9 !important;
+}
+footer h3{
+  font-weight: bold;
+  transition: all 0.4s ease;
+}
+footer h3:hover{
+  color:#d95204;
+}
+footer .container a:hover{
+  text-decoration:none;
+}
+footer .container{
+  line-height:2em;
+}
+footer .container a{
+  transition:all 0.4s ease;
+}
+footer .container a:hover{
+  color:#d95204;
+}
+footer .container a, .container{
+  color:white;
+}
+.footer-logo img{
+  display: block;
+  margin:auto;
+}
+footer button{
+  font-size:15px;
+  font-weight: bold;
+  background-color: #3C4245;
+  margin:20px 0px;
+  border:2px solid #3c4245;
+  border-radius: 4px;
+  width:240px;
+  height:40px;
+  transition:all 0.3s ease-in-out;
+}
+footer button:hover{
+ color:#3c4245;
+ background-color:#fff;
+}
+.bottom-footer{
+  background-color:#3c4245; 
+}
+.container.legal{
+  display:block;
+  text-align:left;
+  font-weight:bold;
+}
+.bottom-footer a{
+  color:white;
+  padding:15px;
+  transition:all 0.2s ease;
+  position: relative;
+}
+.bottom-footer .icons{
+  display: inline-block;
+    font-size:18px;
+    text-align: center;   
+}
+.bottom-footer .cpy{
+  text-align: right;
+}
+
+.bottom-footer i:hover{
+  cursor: pointer;
+  
+}
+.bottom-footer a:hover{
+  text-decoration: none;
+  color:#d95204
 }
