--- a/about/styles1.css
+++ b/about/styles1.css
@@ -32,6 +32,69 @@
   .navbar-nav >li>a:focus,.navbar-nav >li>a:hover{ 
     background-color: #d95204 !important;
   }
+  /*HAMBURGER*/
+
+  .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: #008dc9 ;
+  }
+  
+  .navbar-toggle:focus,
+  .navbar-toggle:active {
+      outline: 0;
+  }
+  
+  .navbar-toggle span {
+    background-color: white !important;
+     display: block;
+     margin-top: 4px;
+     margin-bottom: 4px;
+     -webkit-transform: rotate(0deg);
+     -moz-transform: rotate(0deg);
+     -o-transform: rotate(0deg);
+     transform: rotate(0deg);
+     position: relative;
+     left: 0;
+     opacity: 1;
+  }
+  
+  .navbar-toggle span:nth-child(1),
+  .navbar-toggle span:nth-child(3) {
+     -webkit-transition: transform .35s ease-in-out;
+     -moz-transition: transform .35s ease-in-out;
+     -o-transition: transform .35s ease-in-out;
+     transition: transform .35s ease-in-out;
+  }
+  
+  .navbar-toggle:not(.collapsed) span:nth-child(1) {
+      position: absolute;
+      left: 10px;
+      top: 14px;
+      -webkit-transform: rotate(135deg);
+      -moz-transform: rotate(135deg);
+      -o-transform: rotate(135deg);
+      transform: rotate(135deg);
+      opacity: 0.9;
+  }
+  
+  .navbar-toggle:not(.collapsed) span:nth-child(2) {
+      height: 12px;
+      visibility: hidden;
+      background-color: transparent;
+  }
+  
+  .navbar-toggle:not(.collapsed) span:nth-child(3) {
+      position: absolute;
+      left: 10px;
+      top: 14px;
+      -webkit-transform: rotate(-135deg);
+      -moz-transform: rotate(-135deg);
+      -o-transform: rotate(-135deg);
+      transform: rotate(-135deg);
+      opacity: 0.9;
+  }
+
+
+  /*HAMBURGER END*/
 .section-content .content{
     color:#222;
     font-size:15px;
